--- a/api/.pipeline/templates/api.dc.yaml
+++ b/api/.pipeline/templates/api.dc.yaml
@@ -225,6 +225,11 @@ objects:
                     secretKeyRef:
                       key: object_store_bucket_name
                       name: ${OBJECT_STORE_SECRETS}
+                - name: S3_KEY_PREFIX
+                  valueFrom:
+                    secretKeyRef:
+                      key: s3_key_prefix
+                      name: ${S3_KEY_PREFIX}
                 - name: LOG_LEVEL
                   value: ${LOG_LEVEL}
                 - name: GCNOTIFY_SECRET_API_KEY
