BHBC-1888: Update yaml file

--- a/api/.pipeline/templates/api.dc.yaml
+++ b/api/.pipeline/templates/api.dc.yaml
@@ -43,6 +43,10 @@ parameters:
     description: Platform Elasticsearch index for EML data
     required: true
     value: 'eml'
+  - name: S3_KEY_PREFIX
+    description: S3 key optional prefix
+    required: false
+    value: 'platform'
   - name: TZ
     description: Application timezone
     required: false
