--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,8 @@ services:
     environment:
       - NODE_ENV=${NODE_ENV}
       - ELASTICSEARCH_URL=${ELASTICSEARCH_URL}
+      - ELASTICSEARCH_EML_INDEX=${ELASTICSEARCH_EML_INDEX}
+      - S3_KEY_PREFIX=${S3_KEY_PREFIX}
       - TZ=${API_TZ}
       - API_HOST=${API_HOST}
       - API_PORT=${API_PORT}
