BHBC-1890: Update React from v16 to latest (v18)

--- a/app/package.json
+++ b/app/package.json
@@ -54,8 +54,8 @@
     "moment": "~2.29.2",
     "node-sass": "~4.14.1",
     "qs": "~6.9.4",
-    "react": "~16.14.0",
-    "react-dom": "~16.14.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-dropzone": "~11.3.2",
     "react-leaflet": "~3.1.0",
     "react-leaflet-cluster": "~1.0.3",
