--- a/app/package.json
+++ b/app/package.json
@@ -36,7 +36,6 @@
     "@mdi/react": "~1.4.0",
     "@react-keycloak/web": "~2.1.0",
     "@react-leaflet/core": "~1.0.2",
-    "@testing-library/react-hooks": "^8.0.1",
     "@tmcw/togeojson": "~4.2.0",
     "@turf/bbox": "~6.3.0",
     "@turf/boolean-equal": "~6.3.0",
@@ -71,8 +70,9 @@
   },
   "devDependencies": {
     "@babel/preset-typescript": "~7.12.7",
-    "@testing-library/jest-dom": "~5.11.8",
-    "@testing-library/react": "~11.2.3",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "~12.6.0",
     "@types/geojson": "~7946.0.7",
     "@types/jest": "~26.0.20",
