--- a/app/package.json
+++ b/app/package.json
@@ -54,8 +54,8 @@
     "moment": "~2.29.2",
     "node-sass": "~4.14.1",
     "qs": "~6.9.4",
-    "react": "~16.14.0",
-    "react-dom": "~16.14.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-dropzone": "~11.3.2",
     "react-leaflet": "~3.1.0",
     "react-leaflet-cluster": "~1.0.3",
@@ -71,8 +71,8 @@
   },
   "devDependencies": {
     "@babel/preset-typescript": "~7.12.7",
-    "@testing-library/jest-dom": "~5.11.8",
-    "@testing-library/react": "~11.2.3",
+    "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "~12.6.0",
     "@types/geojson": "~7946.0.7",
     "@types/jest": "~26.0.20",
@@ -83,8 +83,8 @@
     "@types/node": "~14.14.31",
     "@types/node-sass": "~4.11.2",
     "@types/qs": "~6.9.5",
-    "@types/react": "~16.9.17",
-    "@types/react-dom": "~16.9.4",
+    "@types/react": "^17.0.48",
+    "@types/react-dom": "^17.0.17",
     "@types/react-leaflet": "~2.8.2",
     "@types/react-router": "~5.1.4",
     "@types/react-router-dom": "~5.1.3",
@@ -97,11 +97,11 @@
     "eslint": "~6.8.0",
     "eslint-config-prettier": "~6.15.0",
     "eslint-plugin-prettier": "~3.3.1",
-    "jest": "~24.9.0",
+    "jest": "^24.9.0",
     "jest-sonar-reporter": "~2.0.0",
     "prettier": "~2.3.2",
     "prettier-plugin-organize-imports": "~2.3.4",
-    "react-scripts": "~3.4.4"
+    "react-scripts": "^3.4.4"
   },
   "browserslist": {
     "production": [
