--- a/app/package.json
+++ b/app/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "set TSC_COMPILE_ON_ERROR=true && set ESLINT_NO_DEV_ERRORS=true && react-scripts build",
     "deploy_start": "node server",
     "test": "react-scripts test --env=jsdom-fourteen --ci --watchAll=false --runInBand",
     "test:watch": "react-scripts test --env=jsdom-fourteen",
@@ -26,15 +26,15 @@
   },
   "dependencies": {
     "@bcgov/bc-sans": "~1.0.1",
-    "@material-ui/core": "~4.11.0",
-    "@material-ui/icons": "~4.2.1",
-    "@material-ui/lab": "latest",
-    "@material-ui/pickers": "~3.2.10",
-    "@material-ui/styles": "~4.10.0",
-    "@material-ui/system": "4.11.3",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
     "@mdi/js": "~6.4.95",
     "@mdi/react": "~1.4.0",
-    "@react-keycloak/web": "~2.1.0",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/lab": "^5.0.0-alpha.94",
+    "@mui/material": "^5.10.0",
+    "@mui/styles": "^5.9.3",
+    "@react-keycloak/web": "^3.4.0",
     "@react-leaflet/core": "~1.0.2",
     "@testing-library/react-hooks": "^8.0.1",
     "@tmcw/togeojson": "~4.2.0",
@@ -45,7 +45,7 @@
     "clsx": "~1.1.1",
     "express": "~4.17.1",
     "formik": "~2.2.6",
-    "keycloak-js": "~9.0.2",
+    "keycloak-js": "^19.0.1",
     "leaflet": "~1.7.1",
     "leaflet-draw": "~1.0.4",
     "leaflet-fullscreen": "~1.0.2",
@@ -86,8 +86,8 @@
     "@types/react": "^17.0.48",
     "@types/react-dom": "^17.0.17",
     "@types/react-leaflet": "~2.8.2",
-    "@types/react-router": "~5.1.4",
-    "@types/react-router-dom": "~5.1.3",
+    "@types/react-router": "^5.1.18",
+    "@types/react-router-dom": "^5.1.9",
     "@types/react-window": "~1.8.2",
     "@types/shpjs": "^3.4.0",
     "@types/uuid": "~8.3.0",
