--- a/app/package.json
+++ b/app/package.json
@@ -60,8 +60,8 @@
     "react-leaflet": "~3.1.0",
     "react-leaflet-cluster": "~1.0.3",
     "react-number-format": "~4.5.2",
-    "react-router": "~5.1.2",
-    "react-router-dom": "~5.1.2",
+    "react-router": "^5.3.3",
+    "react-router-dom": "^5.3.3",
     "react-window": "~1.8.6",
     "reproj-helper": "~1.2.8",
     "shpjs": "^3.6.3",
@@ -83,11 +83,11 @@
     "@types/node": "~14.14.31",
     "@types/node-sass": "~4.11.2",
     "@types/qs": "~6.9.5",
-    "@types/react": "^17.0.48",
-    "@types/react-dom": "^17.0.17",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
     "@types/react-leaflet": "~2.8.2",
     "@types/react-router": "^5.1.18",
-    "@types/react-router-dom": "^5.1.9",
+    "@types/react-router-dom": "^5.3.3",
     "@types/react-window": "~1.8.2",
     "@types/shpjs": "^3.4.0",
     "@types/uuid": "~8.3.0",
