--- a/app/package.json
+++ b/app/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "set TSC_COMPILE_ON_ERROR=true && set ESLINT_NO_DEV_ERRORS=true && react-scripts build",
+    "build": "react-scripts build",
     "deploy_start": "node server",
     "test": "react-scripts test --env=jsdom-fourteen --ci --watchAll=false --runInBand",
     "test:watch": "react-scripts test --env=jsdom-fourteen",
