--- a/app/package.json
+++ b/app/package.json
@@ -11,10 +11,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "deploy_start": "node server",
-    "test": "react-scripts test --env=jsdom-fourteen --ci --watchAll=false --runInBand",
-    "test:watch": "react-scripts test --env=jsdom-fourteen",
-    "coverage": "react-scripts test --ci --coverage --testResultsProcessor jest-sonar-reporter --env=jsdom-fourteen --watchAll=false --runInBand",
-    "update-snapshots": "react-scripts test --env=jsdom-fourteen --ci --watchAll=false --updateSnapshot",
+    "test": "react-scripts test --ci --watchAll=false --runInBand",
+    "test:watch": "react-scripts test",
+    "coverage": "react-scripts test --ci --coverage --testResultsProcessor jest-sonar-reporter --watchAll=false --runInBand",
+    "update-snapshots": "react-scripts test --ci --watchAll=false --updateSnapshot",
     "lint": "eslint src/ --ext .jsx,.js,.ts,.tsx",
     "lint-fix": "npm run lint -- --fix",
     "format": "prettier --check \"./src/**/*.{js,jsx,ts,tsx,css,scss}\"",
@@ -94,14 +94,14 @@
     "@typescript-eslint/eslint-plugin": "~3.10.1",
     "@typescript-eslint/parser": "~3.10.1",
     "axios-mock-adapter": "~1.19.0",
-    "eslint": "~6.8.0",
     "eslint-config-prettier": "~6.15.0",
     "eslint-plugin-prettier": "~3.3.1",
-    "jest": "^24.9.0",
+    "jest": "^27.5.1",
+    "jest-environment-jsdom": "^28.1.3",
     "jest-sonar-reporter": "~2.0.0",
     "prettier": "~2.3.2",
     "prettier-plugin-organize-imports": "~2.3.4",
-    "react-scripts": "^3.4.4"
+    "react-scripts": "^5.0.1"
   },
   "browserslist": {
     "production": [
