--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -8,7 +8,7 @@
     ],
     "baseUrl": "src",
     "outDir": "dist",
-    "jsx": "react",
+    "jsx": "react-jsx",
     "target": "es2018",
     "sourceMap": true,
     "allowJs": false,
@@ -30,7 +30,7 @@
     "strict": true,
     "typeRoots": [
       "node_modules/@types"
-    ],
+    ]
   },
   "include": [
     "src"
