--- a/app/package.json
+++ b/app/package.json
@@ -91,9 +91,10 @@
     "@types/react-window": "~1.8.2",
     "@types/shpjs": "^3.4.0",
     "@types/uuid": "~8.3.0",
-    "@typescript-eslint/eslint-plugin": "~3.10.1",
-    "@typescript-eslint/parser": "~3.10.1",
+    "@typescript-eslint/eslint-plugin": "^5.33.1",
+    "@typescript-eslint/parser": "^5.33.1",
     "axios-mock-adapter": "~1.19.0",
+    "eslint": "^8.22.0",
     "eslint-config-prettier": "~6.15.0",
     "eslint-plugin-prettier": "~3.3.1",
     "jest": "^27.5.1",
