--- a/app/package.json
+++ b/app/package.json
@@ -41,6 +41,7 @@
     "@turf/boolean-equal": "~6.3.0",
     "@turf/intersect": "~6.3.0",
     "axios": "~0.21.4",
+    "buffer": "^6.0.3",
     "clsx": "~1.1.1",
     "express": "~4.17.1",
     "formik": "~2.2.6",
