--- a/app/package.json
+++ b/app/package.json
@@ -45,6 +45,7 @@
     "clsx": "~1.1.1",
     "express": "~4.17.1",
     "formik": "~2.2.6",
+    "jszip": "^3.10.1",
     "keycloak-js": "^19.0.1",
     "leaflet": "~1.7.1",
     "leaflet-draw": "~1.0.4",
@@ -64,6 +65,7 @@
     "react-router-dom": "^5.3.3",
     "react-window": "~1.8.6",
     "reproj-helper": "~1.2.8",
+    "shapefile": "^0.6.6",
     "shpjs": "^3.6.3",
     "typescript": "~4.1.6",
     "uuid": "~8.3.2",
