--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -202,7 +202,7 @@ jobs:
   buildAPI:
     name: Build API Image
     runs-on: ubuntu-latest
-    if: ${{ github.event.pull_request.merged == false && github.event.pull_request.draft == false }}
+    if: ${{ false && github.event.pull_request.merged == false && github.event.pull_request.draft == false }}
     env:
       PR_NUMBER: ${{ github.event.number }}
     needs:
@@ -260,7 +260,7 @@ jobs:
   buildAPP:
     name: Build APP Image
     runs-on: ubuntu-latest
-    if: ${{ github.event.pull_request.merged == false && github.event.pull_request.draft == false }}
+    if: ${{ false && github.event.pull_request.merged == false && github.event.pull_request.draft == false }}
     env:
       PR_NUMBER: ${{ github.event.number }}
     needs:
@@ -313,6 +313,65 @@ jobs:
         run: |
           npm install --only=production
           DEBUG=* npm run build -- --pr=$PR_NUMBER
+
+  # Build the GeoServer image
+  buildGeoserver:
+    name: Build GeoServer Image
+    runs-on: ubuntu-latest
+    if: ${{ github.event.pull_request.merged == false && github.event.pull_request.draft == false }}
+    env:
+      PR_NUMBER: ${{ github.event.number }}
+    needs:
+      - checkoutRepo
+    steps:
+      # Install Node - for `node` and `npm` commands
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14
+
+      # Load repo from cache
+      - name: Cache repo
+        uses: actions/cache@v2
+        id: cache-repo
+        env:
+          cache-name: cache-repo
+        with:
+          path: ${{ github.workspace }}/*
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-${{ github.sha }}
+
+      # Checkout the branch if not restored via cache
+      - name: Checkout Target Branch
+        if: steps.cache-repo.outputs.cache-hit != 'true'
+        uses: actions/checkout@v2
+
+      # Cache Node modules
+      - name: Cache node modules
+        uses: actions/cache@v2
+        env:
+          cache-name: cache-node-modules
+        with:
+          # npm cache files are stored in `~/.npm` on Linux/macOS
+          path: ~/.npm
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('*/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+
+      # Log in to OpenShift.
+      # Note: The secrets needed to log in are NOT available if the PR comes from a FORK.
+      # PR's must originate from a branch off the original repo or else all openshift `oc` commands will fail.
+      - name: Log in to OpenShift
+        run: oc login --token=${{ secrets.TOOLS_SA_TOKEN }} --server=https://api.silver.devops.gov.bc.ca:6443
+
+      # Build the GeoServer image
+      - name: Build GeoServer Image
+        working-directory: "./geoserver/.pipeline/"
+        run: |
+          npm install --only=production
+          DEBUG=* npm run build -- --pr=$PR_NUMBER
+
 
   # Deploy Database image
   deployDatabase:
@@ -437,7 +496,7 @@ jobs:
   deployAPI:
     name: Deploy API Image
     runs-on: ubuntu-latest
-    if: ${{ github.event.pull_request.merged == false && github.event.pull_request.draft == false }}
+    if: ${{ false && github.event.pull_request.merged == false && github.event.pull_request.draft == false }}
     env:
       PR_NUMBER: ${{ github.event.number }}
     needs:
@@ -497,7 +556,7 @@ jobs:
   deployAPP:
     name: Deploy APP Image
     runs-on: ubuntu-latest
-    if: ${{ github.event.pull_request.merged == false && github.event.pull_request.draft == false }}
+    if: ${{ false && github.event.pull_request.merged == false && github.event.pull_request.draft == false }}
     env:
       PR_NUMBER: ${{ github.event.number }}
     needs:
@@ -548,6 +607,67 @@ jobs:
       # Deploy the app image
       - name: Deploy APP Image
         working-directory: "./app/.pipeline"
+        run: |
+          npm install --only=production
+          DEBUG=* npm run deploy -- --pr=$PR_NUMBER --env=dev
+
+  # Deploy GeoServer image
+  deployGeoserver:
+    name: Deploy buildGeoserver Image
+    runs-on: ubuntu-latest
+    if: ${{ github.event.pull_request.merged == false && github.event.pull_request.draft == false }}
+    env:
+      PR_NUMBER: ${{ github.event.number }}
+    needs:
+      - scaleDownPods
+      - buildGeoserver
+      - deployDatabase
+      - deployDatabaseSetup
+    steps:
+      # Install Node - for `node` and `npm` commands
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14
+
+      # Load repo from cache
+      - name: Cache repo
+        uses: actions/cache@v2
+        id: cache-repo
+        env:
+          cache-name: cache-repo
+        with:
+          path: ${{ github.workspace }}/*
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-${{ github.sha }}
+
+      # Checkout the branch if not restored via cache
+      - name: Checkout Target Branch
+        if: steps.cache-repo.outputs.cache-hit != 'true'
+        uses: actions/checkout@v2
+
+      # Cache Node modules
+      - name: Cache node modules
+        uses: actions/cache@v2
+        env:
+          cache-name: cache-node-modules
+        with:
+          # npm cache files are stored in `~/.npm` on Linux/macOS
+          path: ~/.npm
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('*/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+
+      # Log in to OpenShift.
+      # Note: The secrets needed to log in are NOT available if the PR comes from a FORK.
+      # PR's must originate from a branch off the original repo or else all openshift `oc` commands will fail.
+      - name: Log in to OpenShift
+        run: oc login --token=${{ secrets.TOOLS_SA_TOKEN }} --server=https://api.silver.devops.gov.bc.ca:6443
+
+      # Deploy the GeoServer image
+      - name: Deploy GeoServer Image
+        working-directory: "./geoserver/.pipeline/"
         run: |
           npm install --only=production
           DEBUG=* npm run deploy -- --pr=$PR_NUMBER --env=dev
