--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,8 +1,8 @@
 name: Linting Checks
 
-on:
-  pull_request:
-    types: [opened, reopened, synchronize, ready_for_review]
+on: workflow_dispatch
+  # pull_request:
+  #   types: [opened, reopened, synchronize, ready_for_review]
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.number }}
