Enable deploy geoserver workflow 2

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -621,8 +621,8 @@ jobs:
     needs:
       - scaleDownPods
       - buildGeoserver
-      - deployDatabase
-      - deployDatabaseSetup
+      # - deployDatabase
+      # - deployDatabaseSetup
     steps:
       # Install Node - for `node` and `npm` commands
       - name: Setup Node.js
